Use toList collector in PortsTests